--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</header>
 						<div class="content">
 							<p><strong>我</strong>来自山西大同，目前是北京大学公共卫生学院在读本科生。（其他的也不知道写什么好=-=）</p>
-							<span class="image main"><img src="desktop/github/1.jpg" alt="" /></span>
+							<span class="image main"><img src="C:\Users\Administrator 007\Desktop\github\1.jpg" alt="" /></span>
 						</div>
 					</section>
 
