--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h2>个人简介</h2>
 						</header>
 						<div class="content">
-							<p><strong>我</strong>来自山西大同，目前是北京大学公共卫生学院在读本科生。（其他的也不知道写什么好=-=）</p>
+							<p><strong>我</strong>来自山西大同，目前是<strong>北京大学公共卫生学院</strong>在读本科生。（下面应该有张图片来着，不过可能本地图片看不了，其他的也不知道写什么好=-=）</p>
 							<span class="image main"><img src="C:\Users\Administrator 007\Desktop\github\1.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -46,35 +46,36 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
+							<h2>我的标签</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+							<p><strong>其实</strong>我自认为对自己了解不够充分全面，所以以下只是结合他人评价的个人标签</p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
+								<li class="icon solid fa-laptop">Computer game? No!</li>
+								<li class="icon solid fa-play">Cartoon</li>
+								<li class="icon solid fa-rmb">Lack of financial management concept</li>
+								<li class="icon solid fa-connections">Friends</li>
+								<li class="icon solid fa-map-marker-alt">travel</li>
+								<li class="icon solid fa-favorites"><strong>single</strong></li>
 							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p>还没想好这一段写什么</p>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Ultrices erat magna sed condimentum</h2>
+							<h2>我的个人生活</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<p><strong>18年时光</strong> 见证我的成长</p>
 
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Erat aliquam</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
+										<h3>Good old days</h3>
+										<p> The bright moon adorns your window</p>
+                                                                                                                                                                <p> While you adorn others' dream</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
