--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+											<a href="http://b254.photo.store.qq.com/psb?/b22d24ce-6405-4db3-93f9-e272bc52b2e1/JAYW1K65Y4Zyj7Xfk*bE4viXMi9ScmMsnMOSMJjeTw0!/b/dES1dJf3DwAA&bo=IANuAkAG3AQBCP4!&rf=viewer_4" class="landscape"><img src="http://b254.photo.store.qq.com/psb?/b22d24ce-6405-4db3-93f9-e272bc52b2e1/JAYW1K65Y4Zyj7Xfk*bE4viXMi9ScmMsnMOSMJjeTw0!/b/dES1dJf3DwAA&bo=IANuAkAG3AQBCP4!&rf=viewer_4" alt="" /></a>
+											<a href="http://b254.photo.store.qq.com/psb?/b22d24ce-6405-4db3-93f9-e272bc52b2e1/rszue7njLa2JHTs6bEPNBfNiJEDWOqxKsXOVZTPh8a8!/b/dGjsaZdqEAAA&bo=IANuAkAG3AQBCP4!&rf=viewer_4"><img src="http://b254.photo.store.qq.com/psb?/b22d24ce-6405-4db3-93f9-e272bc52b2e1/rszue7njLa2JHTs6bEPNBfNiJEDWOqxKsXOVZTPh8a8!/b/dGjsaZdqEAAA&bo=IANuAkAG3AQBCP4!&rf=viewer_4" alt="" /></a>
+											<a href="http://b254.photo.store.qq.com/psb?/b22d24ce-6405-4db3-93f9-e272bc52b2e1/qYw4n7HK3.uQt88tTVCbWUHKJGi88Pdfz4BmDn0m8Mk!/b/dIPkZpc.EAAA&bo=IANuAkAG3AQBCP4!&rf=viewer_4"><img src="http://b254.photo.store.qq.com/psb?/b22d24ce-6405-4db3-93f9-e272bc52b2e1/qYw4n7HK3.uQt88tTVCbWUHKJGi88Pdfz4BmDn0m8Mk!/b/dIPkZpc.EAAA&bo=IANuAkAG3AQBCP4!&rf=viewer_4" alt="" /></a>
+											<a href="http://b254.photo.store.qq.com/psb?/b22d24ce-6405-4db3-93f9-e272bc52b2e1/mvZQV4XIoIHx*fgxdddSyjdyWQXeuyR*8c8DBxWAee4!/b/dF0CbZeNEQAA&bo=IANuAkAG3AQBCP4!&rf=viewer_4"><img src="http://b254.photo.store.qq.com/psb?/b22d24ce-6405-4db3-93f9-e272bc52b2e1/mvZQV4XIoIHx*fgxdddSyjdyWQXeuyR*8c8DBxWAee4!/b/dF0CbZeNEQAA&bo=IANuAkAG3AQBCP4!&rf=viewer_4" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -90,8 +90,8 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
+										<h3>My hometown</h3>
+										<p>Small and unsophisticated, my hometown and people there always give me bits of taste regarding life and love.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
