--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5vafVk4yI7UAc0pF50tMOPnGT9DLTzMCHgecNP7aOxXXyJStjyeTXDYth6.lNLz6qtxVFiyC4j.CG7KgzNKchbE!/b&bo=oAU4BAAAAAABB7k!" alt="" /></span>
 						</div>
 					</section>
 
@@ -38,8 +38,8 @@
 							<h2>个人简介</h2>
 						</header>
 						<div class="content">
-							<p><strong>我</strong>来自山西大同，目前是<strong>北京大学公共卫生学院</strong>在读本科生。（下面应该有张图片来着，不过可能本地图片看不了，其他的也不知道写什么好=-=）</p>
-							<span class="image main"><img src="C:\Users\Administrator 007\Desktop\github\1.jpg" alt="" /></span>
+							<p><strong>我</strong>来自山西大同，目前是<strong>北京大学公共卫生学院</strong>在读本科生。（其他的也不知道写什么好=-=）</p>
+							<span class="image main"><img src="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5hAYWoZCw7J.jPNIk3ECsPlEm9lKPD1o0hO1Q0im0vaZiOvMorh*iRg9J6JVq4GVo6C0ylYaZSu1VVa4j7RSjCQ!/b&bo=OASgBQAAAAABB7k!&rf=viewer_4" alt="" /></span>
 						</div>
 					</section>
 
@@ -95,9 +95,9 @@
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<a href="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5pVcD9NXSulUcd3xM7yK1XzFlRy1Smr1n7hlYPMMBAsnlvE.OxCQ4Y4n32fHzRn4WcmwnYBRGlHTwVfDDtKPQkw!/b&bo=oAU4BAAAAAABB7k!&rf=viewer_4" class="landscape"><img src="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5pVcD9NXSulUcd3xM7yK1XzFlRy1Smr1n7hlYPMMBAsnlvE.OxCQ4Y4n32fHzRn4WcmwnYBRGlHTwVfDDtKPQkw!/b&bo=oAU4BAAAAAABB7k!&rf=viewer_4" alt="" /></a>
+											<a href="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5h1SLckhJ0ln5rpS6.to8*EPCpTyle1upN5yOxByqiW09WmW8OurgAQQN8Tr2KqWvyTsd.LalQJGXQANRh1ZU74!/b&bo=oAU4BAAAAAABB7k!&rf=viewer_4"><img src="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5h1SLckhJ0ln5rpS6.to8*EPCpTyle1upN5yOxByqiW09WmW8OurgAQQN8Tr2KqWvyTsd.LalQJGXQANRh1ZU74!/b&bo=oAU4BAAAAAABB7k!&rf=viewer_4" alt="" /></a>
+											<a href="https://user.qzone.qq.com/1095760406/infocenter?via=toolbar&_t_=0.4420658326793674"><img src="https://user.qzone.qq.com/1095760406/infocenter?via=toolbar&_t_=0.4420658326793674" alt="" /></a>
 										</div>
 									</div>
 								</section>
