--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 								<li class="icon solid fa-play">Cartoon</li>
 								<li class="icon solid fa-rmb">Lack of financial management concept</li>
 								<li class="icon solid fa-connections">Friends</li>
-								<li class="icon solid fa-map-marker-alt">travel</li>
-								<li class="icon solid fa-favorites"><strong>single</strong></li>
+								<li class="icon solid fa-map-marker-alt">Travel</li>
+								<li class="icon solid fa-favorites"><strong>Single</strong></li>
 							</ul>
 							<p>还没想好这一段写什么</p>
 						</div>
@@ -97,7 +97,7 @@
 										<div class="gallery">
 											<a href="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5pVcD9NXSulUcd3xM7yK1XzFlRy1Smr1n7hlYPMMBAsnlvE.OxCQ4Y4n32fHzRn4WcmwnYBRGlHTwVfDDtKPQkw!/b&bo=oAU4BAAAAAABB7k!&rf=viewer_4" class="landscape"><img src="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5pVcD9NXSulUcd3xM7yK1XzFlRy1Smr1n7hlYPMMBAsnlvE.OxCQ4Y4n32fHzRn4WcmwnYBRGlHTwVfDDtKPQkw!/b&bo=oAU4BAAAAAABB7k!&rf=viewer_4" alt="" /></a>
 											<a href="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5h1SLckhJ0ln5rpS6.to8*EPCpTyle1upN5yOxByqiW09WmW8OurgAQQN8Tr2KqWvyTsd.LalQJGXQANRh1ZU74!/b&bo=oAU4BAAAAAABB7k!&rf=viewer_4"><img src="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5h1SLckhJ0ln5rpS6.to8*EPCpTyle1upN5yOxByqiW09WmW8OurgAQQN8Tr2KqWvyTsd.LalQJGXQANRh1ZU74!/b&bo=oAU4BAAAAAABB7k!&rf=viewer_4" alt="" /></a>
-											<a href="https://user.qzone.qq.com/1095760406/infocenter?via=toolbar&_t_=0.4420658326793674"><img src="https://user.qzone.qq.com/1095760406/infocenter?via=toolbar&_t_=0.4420658326793674" alt="" /></a>
+											<a href="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5h1SLckhJ0ln5rpS6.to8*HmuqbXJ0sFic1ZKf7A6NVw460zoqpmCPrJpxSWr.6riD8CK0Rsne7JbHolP1vC.Ik!/b&bo=OASgBQAAAAABB7k!&rf=viewer_4"><img src="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5h1SLckhJ0ln5rpS6.to8*HmuqbXJ0sFic1ZKf7A6NVw460zoqpmCPrJpxSWr.6riD8CK0Rsne7JbHolP1vC.Ik!/b&bo=OASgBQAAAAABB7k!&rf=viewer_4" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -105,14 +105,14 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Lorem gravida</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
+										<h3>Nowadays</h3>
+										<p>Don't look forward to tomorrow, don't miss yesterday, only to grasp today.</p>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+											<a href="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5oPXBZ9L1xWkDFpTDhHk5B.P6N2GZL11AI1uleFyaR6qVjjnefz1JqoNp62sC3HdZdaBPY7RjedFsEV9SaO*slk!/b&bo=OAQXCQAAAAABBwI!&rf=viewer_4" class="portrait"><img src="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5oPXBZ9L1xWkDFpTDhHk5B.P6N2GZL11AI1uleFyaR6qVjjnefz1JqoNp62sC3HdZdaBPY7RjedFsEV9SaO*slk!/b&bo=OAQXCQAAAAABBwI!&rf=viewer_4" alt="" /></a>
+											<a href="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5oPXBZ9L1xWkDFpTDhHk5B*tW1cQPwNUzfEtw7ekjPVOzf0YRpKSJU*O8iD1RgPcWoOLk9SciOcwNqfTHrDCUh0!/b&bo=OAQXCQAAAAABBwI!&rf=viewer_4" class="portrait"><img src="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5oPXBZ9L1xWkDFpTDhHk5B*tW1cQPwNUzfEtw7ekjPVOzf0YRpKSJU*O8iD1RgPcWoOLk9SciOcwNqfTHrDCUh0!/b&bo=OAQXCQAAAAABBwI!&rf=viewer_4" alt="" /></a>
+											<a href="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5oPXBZ9L1xWkDFpTDhHk5B9UdloWiak6VL6fMv*ZUl*J8mIQ4Kckk5VdWrRHaFIZnRckkhvDnjDDoMSUDtZvzk0!/b&bo=oAU4BAAAAAABB7k!&rf=viewer_4" class="landscape"><img src="http://m.qpic.cn/psc?/V53pZTEX0BJgxs3P9QP420IlAN0Bicch/ruAMsa53pVQWN7FLK88i5oPXBZ9L1xWkDFpTDhHk5B9UdloWiak6VL6fMv*ZUl*J8mIQ4Kckk5VdWrRHaFIZnRckkhvDnjDDoMSUDtZvzk0!/b&bo=oAU4BAAAAAABB7k!&rf=viewer_4" alt="" /></a>
 										</div>
 									</div>
 								</section>
@@ -123,13 +123,13 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Duis sed adpiscing veroeros amet</h2>
+							<h2>这里有待完善</h2>
 						</header>
 						<div class="content">
-							<p><strong>Proin tempus feugiat</strong> sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore.</p>
+							<p><strong>下面</strong> 两个按钮我还不会改</p>
 							<ul class="actions">
-								<li><a href="#" class="button primary large">Get Started</a></li>
-								<li><a href="#" class="button large">Learn More</a></li>
+								<li><a href="#" class="button primary large">回到开头</a></li>
+								<li><a href="#" class="button large">还是回到开头</a></li>
 							</ul>
 						</div>
 					</section>
