--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<h2>Get in touch</h2>
 						</header>
 						<div class="content">
-							<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
+							<p><strong>这里</strong> 的功能我还不是很懂啊</p>
 							<form>
 								<div class="fields">
 									<div class="field half">
@@ -430,18 +430,19 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<p>lvxuan2001@stu.pku.edu.cn</p>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
+									<p>1871012****</p>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road, Nashville, TN 00000</span>
+									<span>北大：北京市海淀区颐和园路5号</span>
+                                                                                                                                                <span>北医：北京市海淀区学院路38号</span>
 								</li>
 								<li>
-									<h3>Elsewhere</h3>
+									<h3>E一下按钮无法使用</h3>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
