--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 							<ul class="feature-icons">
 								<li class="icon solid fa-laptop">Computer game? No!</li>
 								<li class="icon solid fa-play">Cartoon</li>
-								<li class="icon solid fa-rmb">Lack of financial management concept</li>
-								<li class="icon solid fa-connections">Friends</li>
+								<li class="icon solid fa-credit-card">Lack of financial management concept</li>
+								<li class="icon solid fa-male">Friends</li>
 								<li class="icon solid fa-map-marker-alt">Travel</li>
-								<li class="icon solid fa-favorites"><strong>Single</strong></li>
+								<li class="icon solid fa-heart"><strong>Single</strong></li>
 							</ul>
-							<p>还没想好这一段写什么</p>
+							<p>Being able to appreciate beauty in the ordinary, your life will be more vibrant.</p>
 						</div>
 					</section>
 
@@ -438,11 +438,11 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>北大：北京市海淀区颐和园路5号</span>
-                                                                                                                                                <span>北医：北京市海淀区学院路38号</span>
+									<p>北大：北京市海淀区颐和园路5号</p>
+                                                                                                                                                <p>北医：北京市海淀区学院路38号</p>
 								</li>
 								<li>
-									<h3>E一下按钮无法使用</h3>
+									<h3>以下按钮无法使用</h3>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
